--- a/System.ArrayExtension.Accelerated/System.ArrayExtension.Accelerated.csproj
+++ b/System.ArrayExtension.Accelerated/System.ArrayExtension.Accelerated.csproj
@@ -6,7 +6,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;DEBUG;NETSTANDARD;NETSTANDARD2_0;DEBUG;NETSTANDARD;NETSTANDARD2_0;DEBUG;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+      <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;OSX;DEBUG;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -14,10 +14,13 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-      <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;WIN</DefineConstants>
+      <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;OSX</DefineConstants>
       <DocumentationFile></DocumentationFile>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="Kernels\ArithmeticKernel.c" />
+    </ItemGroup>
     <ItemGroup>
       <None Update="System.ArrayExtension.Accelerated.dll.config">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -36,6 +39,10 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <Resource Include="Kernels\ArithmeticKernel.c" />
+      <EmbeddedResource Include="Kernels\TrignometryKernel.c" />
+    </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Update="Kernels\CLCode.resx">
         <Generator>ResXFileCodeGenerator</Generator>
