--- a/System.ArrayExtension.Accelerated/System.ArrayExtension.Accelerated.csproj
+++ b/System.ArrayExtension.Accelerated/System.ArrayExtension.Accelerated.csproj
@@ -51,7 +51,7 @@
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Update="Kernels\CLCode.resx">
-        <Generator>ResXFileCodeGenerator</Generator>
+        <Generator>PublicResXFileCodeGenerator</Generator>
         <LastGenOutput>CLCode.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
