--- a/SuperchargedArray/SuperchargedArray.csproj
+++ b/SuperchargedArray/SuperchargedArray.csproj
@@ -50,6 +50,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Amplifier.NET\Amplifier.Net\Amplifier.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
