--- a/SuperNeuro/SuperNeuro.csproj
+++ b/SuperNeuro/SuperNeuro.csproj
@@ -4,6 +4,18 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Data\Parser\MNISTParser.cs" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="OpenCvSharp3-AnyCPU" Version="4.0.0.20181129" />
@@ -12,6 +24,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SuperchargedArray\SuperchargedArray.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Parser\" />
   </ItemGroup>
 
 </Project>
