--- a/SpicyNLP/SpicyNLP.csproj
+++ b/SpicyNLP/SpicyNLP.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SuperchargedArray\SuperchargedArray.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SuperNeuro\SuperNeuro.csproj" />
   </ItemGroup>
 
 </Project>
